# textrpg

./: CMakeLists.txt  README.md  TextRPG  TextRPG.cpp  stuff  to do  what im working on now
Files/: TextRPG  TextRPG.cpp
Files/Headers/: beggardialogue.h  centralloop.h  dungeon.h  enemies.h  entity.h  inventory.h  items.h  player.h  shop.h
Headers/: centralloop.h  inventoryloop.h  items.h  player.h  shop.h  sword.h
TextRPG/: TextRPG.cpp
TextRPG/Headers/: beggardialogue.h  inventory.h  itemsinclude.h  sword.h
compiles/: TextRPG
compiles/Headers/: centralloop.h  player.h  shop.h
src/: TextRPG
src/Headers/: enemies.h  inventory.h  player.h  shop.h
